# ChatPDF-Pro

./: README.md
chatbot-pro/: pyproject.toml  requirements.txt
chatbot-pro/backened/: README.md  app.py  rag_chain.py
chatbot-pro/frontend/: index.html
